bug fixing contact section align on mobile

--- a/style.css
+++ b/style.css
@@ -853,3 +853,16 @@ a {
         font-size: 16px;
     }
 }
+
+@media screen and (max-width: 425px) {
+    .contact-info-grid {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info-item {
+        width: 90%;
+        max-width: 360px;
+    }
+}
